--- a/MenuBI/app/src/main/res/values/strings.xml
+++ b/MenuBI/app/src/main/res/values/strings.xml
@@ -31,6 +31,13 @@
     <string name="number3">3</string>
     <string name="number4">4</string>
     <string name="txt">Texte</string>
+    <string name="title_activity_client_pay">ClientPay</string>
+
+    <string-array name="tables">
+        <item name="table1">Table 1</item>
+        <item name="table2">Table 2</item>
+        <item name="table3">Table 3</item>
+    </string-array>
 
     <string-array name="categorie">
         <item>Entrées</item>
